COH-25213 Run tests using module path - open JUnit packages to Failsafe when running modular tests (merge main -> ce/main 92362)
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 92363]